tests/errors/test_78.x
// No such libc variable

import "../../lib/std.x" as std;

fn main() -> void {

	std::print(@what);

}
